<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settings_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:id="@+id/btn_back_settings"
            android:background="@drawable/img_left_arrow"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="-45dp"
            android:layout_marginStart="-45dp"
            android:textColor="#FFFFFF"
            android:textSize="45sp"
            android:text="@string/settings_text"
            android:gravity="center"
            android:id="@+id/tvTitle"
            />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/background_white_circle"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:paddingLeft="30dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingRight="30dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:clipChildren="false"
        android:clipToPadding="false"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:clipChildren="false"
            android:clipToPadding="false"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:clipChildren="false"
                android:clipToPadding="false"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textSize="27sp"
                    android:textColor="#FFFFFF"
                    android:text="@string/music_text"
                    />
                <View
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:id="@+id/btn_music_settings"
                    android:background="@drawable/hollow_white_circle"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:clipChildren="false">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textSize="27sp"
                    android:textColor="#FFFFFF"
                    android:text="@string/sound_text"
                    />
                <View
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:id="@+id/btn_sound_settings"
                    android:background="@drawable/hollow_white_circle"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:clipChildren="false">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textSize="27sp"
                    android:textColor="#FFFFFF"
                    android:text="@string/vibration_text"
                    />
                <View
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:id="@+id/btn_vibration_settings"
                    android:background="@drawable/hollow_white_circle"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:textSize="27sp"
                    android:textColor="#FFFFFF"
                    android:text="@string/best_score_text"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:minWidth="40dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="27sp"
                    android:textColor="#FFFFFF"
                    android:id="@+id/tvBestScore_settings"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:textSize="27sp"
                    android:textColor="#FFFFFF"
                    android:text="@string/total_score_text"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:minWidth="40dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="27sp"
                    android:textColor="#FFFFFF"
                    android:id="@+id/tvTotalScore"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:textSize="27sp"
                    android:textColor="#FFFFFF"
                    android:text="@string/average_score_text"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:minWidth="40dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="27sp"
                    android:textColor="#FFFFFF"
                    android:id="@+id/tvAverageScore"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:textSize="27sp"
                    android:textColor="#FFFFFF"
                    android:text="@string/games_played_text"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:minWidth="40dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="27sp"
                    android:textColor="#FFFFFF"
                    android:id="@+id/tvTotalGames_settings"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="17sp"
            android:textColor="#FFFFFF"
            android:text="@string/proverb_1"
            android:gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="#FFFFFF"
            android:text="@string/leonardo_da_vinci"
            android:gravity="end"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            />
    </LinearLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:visibility="visible"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"/>

</LinearLayout>