<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/single_player_game"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <View
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:id="@+id/btn_back_single_player_game"
                android:background="@drawable/img_left_arrow"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:id="@+id/tvAverageScore_single_player"
                android:text="Avg: 55"
                android:gravity="center"
                android:textSize="24sp"
                android:textColor="#FFFFFF"
                />

            <View
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:id="@+id/img_top_score_single_player_game"
                android:background="@drawable/img_top_score"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/img_top_score_single_player_game"
                android:layout_toStartOf="@id/img_top_score_single_player_game"
                android:text="55"
                android:gravity="center"
                android:textSize="27sp"
                android:textColor="#FFFFFF"
                android:id="@+id/tvBestScore_single_player"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/background_white_09_circle">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/divider"
                android:layout_centerInParent="true"
                android:background="@drawable/background_white_circle"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/score_text"
                android:textSize="54sp"
                android:textColor="#50FFFFFF"
                android:id="@+id/tvScoreText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/divider"
                android:gravity="center"
                android:textSize="54sp"
                android:textColor="#30FFFFFF"
                android:id="@+id/tvScore"
                />
        </RelativeLayout>



        <TextView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:text="@string/instruction_3"
            android:gravity="center"
            android:textSize="43sp"
            android:textColor="#45FFFFFF"
            android:id="@+id/tvInstruction"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/background_white_09_circle"
            />

        <com.archer.survival_circle_2.game_logic.BallView
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:id="@+id/ball"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/solid_black_circle"
            />
        <com.archer.survival_circle_2.game_logic.HollowCircleView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/survival_circle"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/background_survival_circle"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/background_white_circle"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <com.archer.survival_circle_2.game_logic.DirectionPadView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/d_pad_one"
            />

        <View
            android:alpha=".5"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:background="@drawable/img_direction_1"
            />
        <View
            android:alpha=".5"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:background="@drawable/img_direction_1"
            />
        <View
            android:alpha=".5"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/img_direction_2"
            />
        <View
            android:alpha=".5"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/img_direction_3"
            />
        <View
            android:alpha=".5"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/img_direction_4"
            />
        <View
            android:alpha=".5"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/img_direction_5"
            />
        <View
            android:alpha=".5"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/img_direction_6"
            />
        <View
            android:alpha=".5"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/img_direction_7"
            />
        <View
            android:alpha=".5"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_centerVertical="true"
            android:background="@drawable/img_direction_8"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#72FFFFFF"
            android:textSize="36sp"
            android:gravity="center"
            android:textScaleX="1.1"
            android:id="@+id/tvInstruction2"
            android:text="@string/intruction_4"/>


    </RelativeLayout>


</LinearLayout>