<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/home_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:text="BEST: 99"
            android:id="@+id/tvBestScore_home"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:text="GAMES: 99"
            android:id="@+id/tvTotalGames"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".75"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="45sp"
            android:text="@string/survival_text"
            android:textStyle="bold"
            android:typeface="sans"
            android:id="@+id/tvTitle1"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/background_white_circle"
            android:id="@+id/divider"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="45sp"
            android:text="@string/circle_text"
            android:id="@+id/tvTitle2"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                >
                <View
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:id="@+id/btn_sound"
                    android:background="@drawable/btn_white_circle"
                    />
                <View
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:id="@+id/img_sound"
                    android:layout_centerInParent="true"
                    android:background="@drawable/img_sound_on_1"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                >
                <View
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:id="@+id/btn_music"
                    android:background="@drawable/btn_white_circle"
                    />
                <View
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:id="@+id/img_music"
                    android:layout_centerInParent="true"
                    android:background="@drawable/img_music_on_1"
                    />
            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            >
            <View
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:clickable="true"
                android:id="@+id/btn_play"
                android:layout_centerInParent="true"
                android:background="@drawable/btn_white_circle"
                />
            <View
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/img_play"
                android:layout_centerInParent="true"
                android:background="@drawable/img_btn_play_2"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_margin="9dp">
                <View
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:clickable="true"
                    android:id="@+id/btn_multi_play"
                    android:background="@drawable/btn_white_circle"
                    />
                <View
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:id="@+id/img_multi_play"
                    android:layout_centerInParent="true"
                    android:background="@drawable/img_multiplayer_1"
                    />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="13dp">
                <View
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:clickable="true"
                    android:id="@+id/btn_leader_board"
                    android:background="@drawable/btn_white_circle"
                    />
                <View
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:id="@+id/img_leader_board"
                    android:layout_centerInParent="true"
                    android:background="@drawable/img_btn_top_scores_1"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="13dp">
                <View
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:clickable="true"
                    android:id="@+id/btn_settings"
                    android:background="@drawable/btn_white_circle"
                    />
                <View
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:id="@+id/img_settings"
                    android:layout_centerInParent="true"
                    android:background="@drawable/img_settings_1"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="13dp">
                <View
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:clickable="true"
                    android:id="@+id/btn_rate"
                    android:background="@drawable/btn_white_circle"
                    />
                <View
                    android:layout_width="31dp"
                    android:layout_height="31dp"
                    android:id="@+id/img_rate"
                    android:layout_centerInParent="true"
                    android:background="@drawable/img_btn_rate_1"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="13dp">
                <View
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:clickable="true"
                    android:id="@+id/btn_share"
                    android:background="@drawable/btn_white_circle"
                    />
                <View
                    android:layout_width="22dp"
                    android:layout_height="25dp"
                    android:id="@+id/img_share"
                    android:layout_centerInParent="true"
                    android:background="@drawable/img_share_1"
                    />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:visibility="visible"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"/>
</LinearLayout>